fixing item.cpu in dashboard index & closing session in rpcServer

--- a/Inventory/Inventory_Service/Dashboard/templates/edmin/code/index.html
+++ b/Inventory/Inventory_Service/Dashboard/templates/edmin/code/index.html
@@ -675,7 +675,7 @@ $('#vmTemplate').change(function() {
                 <tr class="heading">
                           <td class="cell-icon"></td>
                           <td class="cell-title">${item.name}</td>
-                          <td class="cell-status hidden-phone hidden-tablet">CPU</td>
+                          <td class="cell-status hidden-phone hidden-tablet">${item.cpu}</td>
                           <td class="cell-time align-right">${item.ram}</td>
                           <td class="cell-time align-right">${item.disk}</td>
                           <td class="cell-time align-right">${item.os}</td>
